# TOEAT

./: .env.example  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  requirements.txt
core/: settings.py  urls.py  views.py
events/: urls.py  views.py
menus/: forms.py  models.py  urls.py  views.py
menus/migrations/: 0001_initial.py  0002_menu_user.py  0003_alter_menu_latitude_alter_menu_longitude.py  0004_alter_menu_user.py  0005_menu_created_at.py
static/css/: loading.css
static/js/: map.js
templates/: home.html  navbar.html  shared.html
templates/calendars/: calendar.html
templates/menus/: maps.html  select.html
templates/todos/: chart.html  create.html  index.html
templates/users/: data.html  home.html  index.html  login.html  register.html
todos/: forms.py  models.py  urls.py  views.py
todos/migrations/: 0001_initial.py  0002_todo_user.py  0003_category_remove_todo_category_todo_category.py  0004_alter_category_name.py  0005_alter_todo_user.py  0006_remove_todo_user.py  0007_todo_user.py  0008_todo_date.py  0009_remove_todo_category_delete_category.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_user.py  0003_remove_user_user.py  0004_record_delete_user.py  0005_alter_record_height_alter_record_name_and_more.py
