[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Ula Wang <lilingwang32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-crispy-forms = "^2.1"
crispy-tailwind = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
