[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Ula Wang <lilingwang32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-crispy-forms = "^2.1"
crispy-tailwind = "^1.0.3"
plotly = "^5.22.0"
mysqlclient = "^2.2.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
